fix text overflow

--- a/src/style/hackstoga.css
+++ b/src/style/hackstoga.css
@@ -46,7 +46,7 @@ body {
 #signup-button:hover { box-shadow: 0.8rem 0.6rem rgba(var(--signup-button-shadow), 30%); filter: drop-shadow(0 0 2px #fff5);}
 
 /* Info */
-#info {width: 100%; flex-direction: column; padding-bottom: 10%; height: 45rem; background-color: var(--darkpage); color: var(--darktext);}
+#info {width: 100%; flex-direction: column; padding-bottom: 10%; height: fit-content; background-color: var(--darkpage); color: var(--darktext);}
 #info-container {flex-direction: row;flex-wrap: wrap;text-align: center;}
 .tidbit {margin: .5rem !important;flex: 0 0 25%;max-width: 25%;font-size: medium;}
 .tidbit > h1 {text-decoration: none; color: var(--tidbit-title);}
